--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@tiptap/starter-kit": "^2.14.0",
     "@types/google.maps": "^3.58.1",
     "@upstash/redis": "^1.34.8",
+    "archiver": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.1",
     "clsx": "^2.1.1",
@@ -109,6 +110,7 @@
     "@eslint/eslintrc": "^3",
     "@faker-js/faker": "^9.6.0",
     "@tailwindcss/postcss": "^4",
+    "@types/archiver": "^6.0.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
