--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build --no-lint",
+    "build": "prisma generate && next build --no-lint",
     "start": "next start",
     "lint": "next lint",
     "start:socket": "node server.js",
-    "dev:socket": "nodemon server.js"
+    "dev:socket": "nodemon server.js",
+    "postinstall": "prisma generate"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
