--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "@tiptap/starter-kit": "^2.14.0",
     "@types/google.maps": "^3.58.1",
     "@upstash/redis": "^1.34.8",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "archiver": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.1",
