--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-"build": "prisma generate && next build --no-lint",
-"start": "prisma db push && next start",
+    "build": "prisma generate && prisma db push && next build --no-lint",
+    "start": "next start",
     "lint": "next lint",
     "start:socket": "node server.js",
     "dev:socket": "nodemon server.js",
