--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "rm -rf .next && prisma generate && next build",
+    "build": "prisma generate && prisma db push && next build --no-lint",
     "start": "node server-integrated.js",
     "start:local": "node server.js",
     "lint": "next lint",
